# gootest

./: CMakeLists.txt  main.cpp
Tests/: lol.cpp
